--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link
+      rel="shortcut icon"
+      href="https://cdn-icons.flaticon.com/png/512/2993/premium/2993012.png?token=exp=1644343125~hmac=24befce779ebadc2098d8acfce5fe673"
+      type="image/x-icon"
+    />
+    <title>PreOnboard</title>
   </head>
   <body>
     <div id="root"></div>
